fix item context menu alignment

--- a/public/css/_context-menus.sass
+++ b/public/css/_context-menus.sass
@@ -42,7 +42,7 @@
       margin: 0 10px 0 0
 
 #item-context-menu
-  bottom: -110px
+  top: 50%
   left: calc(50% + 54px)
 
   &:after
